--- a/task.html
+++ b/task.html
@@ -43,7 +43,7 @@
   <section id="education" class="section">
     <h2>Education</h2>
     <div class="edu-card">
-      <h3>Bachelor of Technology in Computer Science and Specialization with IT</h3>
+      <h3>Bachelor of Technology in Computer Science with Specialization in IT</h3>
       <p>SRM University, (2025 - 2029)</p>
     </div>
     <div class="edu-card">
